examples/datalog/10_edge_cases/139_zero_division.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_safe_div
Knowledge graph 'test_safe_div' created.
Switched to knowledge graph: test_safe_div
> .kg use test_safe_div
Switched to knowledge graph: test_safe_div
> +data[(10, 2), (20, 5), (30, 0), (40, 4)].
Inserted 4 fact(s) into 'data'.
> safe_div(A, B, R) :- data(A, B), B != 0, R = A / B.
Script error: Query execution failed: Unsafe rule: Atom { relation: "safe_div", args: [Variable("A"), Variable("B"), Variable("R")] }. Variables ["R"] in head do not appear in positive body atoms.
