examples/datalog/10_edge_cases/139_zero_division.dl
% Test: Division avoiding zero
% Expected: Only divide when safe
% Category: 10_edge_cases
% Priority: P2 - Edge cases

.kg create test_safe_div
.kg use test_safe_div

+data[(10, 2), (20, 5), (30, 0), (40, 4)].

% Only divide where divisor != 0
safe_div(A, B, R) :- data(A, B), B != 0, R = A / B.

?- safe_div(A, B, R).

.kg use default
.kg drop test_safe_div
